# Clair

./: .gitignore  CLAUDE.md  README.en.md  README.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json
doc/: backend-dev.md  frontend-dev.md  linux-code-review-report.md  linux-refactor-plan.md  prd.md  test.md  ui-ux-assessment.md  ui-ux-issues.md  windows-adaptation-checklist.md  windows-profile-settings-strategy.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  profile.rs  provider.rs  proxy.rs  settings.rs  wrapper.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/domain/: mod.rs  profile.rs  provider.rs  settings.rs
src-tauri/src/proxy/: server.rs
src-tauri/src/security/: mod.rs  secret.rs  validation.rs
src-tauri/src/services/: claude_detect_service.rs  mod.rs  provider_service.rs  settings_service.rs  wrapper_service.rs
src-tauri/src/utils/: mod.rs
src/app/: App.tsx
src/components/common/: Badge.tsx  ErrorBoundary.tsx  ProviderAvatar.tsx  TestResultModal.tsx  Toast.tsx
src/components/layout/: DetailPanel.tsx  MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/hooks/: useProfiles.ts  useProviders.ts  useProxyStatus.ts  useSettings.ts  useToast.ts  useUIStore.ts
src/lib/: api.ts  i18n.tsx  types.ts  validators.ts
src/styles/: globals.css
utils/: check-dependencies.sh
(+7 files in other folders)
